# dispatchers

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml
dispatcher/: Cargo.toml
dispatcher/src/: dispatcher.rs  lib.rs  observer.rs
examples/: broadcaster.rs  mutable.rs
examples/mutable/: Cargo.toml
examples/mutable/src/: main.rs  mutable.rs
src/: broadcaster.rs  dispatcher.rs  lib.rs
tests/: test_dispatcher.rs  test_dispatchers.rs
