[package]
name = "dispatchers"
version = "0.2.1"
edition = "2021"
description = "A message dispatcher trait and some implementations"
homepage = "https://docs.rs/dispatchers"
repository = "https://github.com/quantmind/dispatchers"
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "justfile",
]


[dependencies]
async-trait = { version = "0.1.64", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"], optional = true }


[features]
shared = ["async-trait", "tokio"]


[[example]]
name = "mutable"
path = "examples/mutable.rs"

[[example]]
name = "broadcaster"
path = "examples/broadcaster.rs"

[[test]]
name = "tests"
path = "tests/test_dispatchers.rs"
