[package]
name = "dispatchers"
version = "0.2.5"
edition = "2021"
description = "Message dispatchers"
homepage = "https://docs.rs/dispatchers"
repository = "https://github.com/quantmind/dispatchers"
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "justfile",
]


[dependencies]
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"], optional = true }


[features]
shared = ["tokio"]


[[example]]
name = "mutable"
path = "examples/mutable.rs"

[[example]]
name = "broadcaster"
path = "examples/broadcaster.rs"

[[test]]
name = "tests"
path = "tests/test_dispatchers.rs"

[package.metadata.docs.rs]
all-features = true
